csrc/tests/codegen_probes/errors/err_val_nonstring.bas
' REJECT: VAL() of a numeric expression (expects a string).
' zxbparser p_val:3463 syntax_error_expected_string.
Dim x As Float
x = Val(5)
Print x
